--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -9,6 +9,9 @@
   }
 
   .ku-branding-logo {
+    .logo-img {
+      .img-responsive;
+    }
     height: @ku-branding-box-height;
     width: 61px;
     z-index: 10;
