--- a/less/ku-visited-links.less
+++ b/less/ku-visited-links.less
@@ -4,54 +4,53 @@
 // --------------------------------------------------
 
 a {
-  color: @link-color;
-
+.main-content & {
     &:visited:not(.btn) {
       color: @link-visited-color;
     }
-  
+  }
   // Exceptions to :visited state
   // Comment out to taste
   &.list-group-item:visited {
-    color: @list-group-link-color;
+    color: @list-group-link-color!important;
 
     &.active,
     &.active:focus,
     &.active:hover {
-      color: @list-group-active-color;
+      color: @list-group-active-color!important;
     }
   }
 
   .navbar-default &.navbar-brand:visited {
-    color: @navbar-default-brand-color;
+    color: @navbar-default-brand-color!important;
   }
 
   .navbar-inverse &.navbar-brand:visited {
-    color: @navbar-inverse-brand-color;
+    color: @navbar-inverse-brand-color!important;
   }
 
   .nav-tabs > li > &:visited {
-    color: @link-color;
+    color: @link-color!important;
   }
 
   .nav-pills > li > &:visited {
-    color: @link-color;
+    color: @link-color!important;
   }
 
   .nav-pills > li.active > &:visited {
     &,
     &:focus,
     &:hover {
-      color: @nav-pills-active-link-hover-color;
+      color: @nav-pills-active-link-hover-color!important;
     }
   }
 
   .dropdown-menu > li > &:visited {
-    color: @dropdown-link-color;
+    color: @dropdown-link-color!important;
 
     &:focus,
     &:hover {
-      color: @dropdown-link-hover-color;
+      color: @dropdown-link-hover-color!important;
       background-color: @dropdown-link-hover-bg;
     }
   }
@@ -60,7 +59,7 @@ a {
     &,
     &:focus,
     &:hover {
-      color: @dropdown-link-disabled-color;
+      color: @dropdown-link-disabled-color!important;
     }
   }
 
@@ -69,7 +68,7 @@ a {
     &,
     &:focus,
     &:hover {
-      color: @link-color;
+      color: @link-color!important;
     }
   }
 
@@ -77,7 +76,7 @@ a {
     &,
     &:focus,
     &:hover {
-      color: @pagination-active-color;
+      color: @pagination-active-color!important;
     }
   }
 
@@ -85,11 +84,11 @@ a {
     &,
     &:focus,
     &:hover {
-      color: @pagination-disabled-color;
+      color: @pagination-disabled-color!important;
     }
   }
 
   &.alert-link:visited {
-    color: inherit;
+    color: inherit!important;
   }
 }
