--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -74,6 +74,12 @@
   //border-color: rgba(0,0,0,.1);
   color: @gray-base;
 
+a {
+  &:visited {
+    color: inherit;
+  }
+}
+
   #navbar_menu-clone,
   #topbar_menu-clone {
     background: @white-color;
