--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -73,12 +73,12 @@
 @samf-sub_3-hover: #86ad9e;
 @samf-sub_4: #7d8a8b;
 @samf-sub_4-hover: #6c7778; //Jura
-@jura-sub_1: #ffb400;
-@jura-sub_1-hover: #eba400;
+@jura-sub_1: #ff7d02;
+@jura-sub_1-hover: #e57002;
 @jura-sub_2: #33838a;
 @jura-sub_2-hover: #2b6f75;
-@jura-sub_3: #ccc6ae;
-@jura-sub_3-hover: #b8b29c;
+@jura-sub_3: #849482;
+@jura-sub_3-hover: #6d7a6c;
 @jura-sub_4: #a3650c;
 @jura-sub_4-hover: #8f570a;
 
