--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -206,3 +206,37 @@ nav {
     display: none;
   }
 }
+
+// KU loading symbol
+.ku-loading {
+    border-bottom: 6px solid @gray;
+    border-left: 6px solid @gray;
+    border-right: 6px solid @gray;
+    border-top: 6px solid @ku-red;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    animation: ku-loading .6s infinite linear;
+    overflow: auto;
+    position: absolute;
+    top: 37%;
+    left: 40%;
+}
+
+@-webkit-keyframes ku-loading {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
+
+@keyframes ku-loading {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
