--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2202,7 +2202,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translateY(-50%) translateX(-50%) translate3d(0px,0px,0px);
+        transform: translateY(-50%) translateX(-50%);
       }
     }
     // Position image left
