--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -14,6 +14,7 @@
       <li><a href="#">Special KU plug-ins</a>
         <ul>
           <li><a href="../ku-with-slideshow/">Template with slideshow</a></li>
+          <li><a href="../ku-with-slidegallery/">Template with slide gallery</a></li>
           <li><a href="../ku-gridboxes/">Template with grid boxes</a></li>
           <li><a href="../ku-datatables/">Template with data tables</a></li>
           <li><a href="../ku-formvalidation/">Template with form validation</a></li>
