--- a/less/mixins.less
+++ b/less/mixins.less
@@ -42,3 +42,4 @@
 // Ku specific
 @import "mixins/ku-background-color-with-fallback.less";
 @import "mixins/ku-aligning.less";
+@import "mixins/ku-links.less";
