--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -67,7 +67,7 @@
         width: 430px;
         height: 430px;
         opacity: 0.1;
-        background: url('http://cms.ku.dk/grafik/images/social-icons/footersegl.svg') no-repeat;
+        background: url('https://bootstrap.secure.ku.dk/img/footersegl.svg') no-repeat;
         background-size: cover;
       }
 
