--- a/less/variables.less
+++ b/less/variables.less
@@ -125,10 +125,10 @@
 //** Element ID within SVG icon file.
 @icon-font-svg-id:        "glyphicons_halflingsregular";
 //** Custom KU icon font.
-@custom-icon-font-path:   "http://cms.ku.dk/bootstrap-styling/fonts/";
-@custom-icon-font-name:   "arrow";
+@custom-icon-font-path:   "https://bootstrap.secure.ku.dk/fonts/";
+@custom-icon-font-name:   "ku-symbols";
 //** Element ID within SVG icon file for KU custom font.
-@custom-icon-font-svg-id: "arrow-font";
+@custom-icon-font-svg-id: "ku-symbols";
 
 
 //== Components
